--- a/index.html
+++ b/index.html
@@ -76,22 +76,22 @@ body{
         <div class="company">TECNOLIFT - ASCENSORES Y MONTACARGAS</div>
 
         <div class="info">
-            <img src="assets/icons/phone.svg">
+            <img src="./assets/icons/phone.svg" alt="Teléfono">
             +34 602 227 324
         </div>
 
         <div class="info">
-            <img src="assets/icons/mail.svg">
+            <img src="./assets/icons/mail.svg" alt="Correo">
             gestion@tecnolift.es
         </div>
 
         <div class="info">
-            <img src="assets/icons/web.svg">
+            <img src="./assets/icons/web.svg" alt="Web">
             www.tecnolift.es
         </div>
 
         <div class="info">
-            <img src="assets/icons/pin.svg">
+            <img src="./assets/icons/pin.svg" alt="Dirección">
             Deportista Ramón Mendizábal 2-4 · 03006 Alicante
         </div>
     </div>
@@ -99,7 +99,7 @@ body{
     <div class="divider"></div>
 
     <div class="right">
-        <img src="assets/logo/logo-negro.png" alt="Tecnolift Logo">
+        <img src="./assets/logo/logo-negro.png" alt="Tecnolift Logo">
     </div>
 
 </div>
