--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ body{
     max-width:800px;
 }
 
+/* BLOQUE IZQUIERDO */
 .left{
     flex:1;
 }
@@ -30,7 +31,7 @@ body{
 
 .role{
     font-size:14px;
-    margin-bottom:18px;
+    margin-bottom:20px;
 }
 
 .info{
@@ -45,11 +46,11 @@ body{
     margin-right:8px;
 }
 
-/* NUEVA LÍNEA DIVIDIDA */
+/* LÍNEA DIVIDIDA */
 .divider{
     width:2px;
-    height:150px;
-    margin:0 18px;
+    height:155px;
+    margin:0 15px;
     background: linear-gradient(
         to bottom,
         #e9b129 0%,
@@ -59,8 +60,9 @@ body{
     );
 }
 
+/* BLOQUE DERECHO */
 .right img{
-    max-width:240px;
+    max-width:230px;
 }
 </style>
 
